fixed uneven wells

--- a/app/assets/stylesheets/movies.scss
+++ b/app/assets/stylesheets/movies.scss
@@ -8,6 +8,16 @@
    }
 }
 
+img {
+width: 215px;
+height: 312px;
+}
+
+.well{ 
+    width: 255px;
+    height: 391px;
+}
+
 #layout {
   background-color: gray;
   text-align: center;
